RTDebugLib - Runtime Debugging C++ Library
------------------------------------------
// vim:set ts=2 nowrap:

$Id$
$URL$

2013-11-08  Thore Boeckelmann <tboeckel@gmx.de>

   * configure: allow gcc versions like 4.6, too, instead of 4.6.x only.
   * CRTDebug.cpp: correctly switch back to decimal output of numbers after
     printing some hexdecimal numbers.

2009-07-28  Jens Langner <Jens.Langner@light-speed.de>

   * CRTDebug.c: fixed the broken build when building rtdebug with GCC 4.x.

2008-06-03  Jens Langner <Jens.Langner@light-speed.de>

   * CRTDebug.c: added va_copy() usage to make the new dynamic allocation
     for non-vasprintf() systems more safe.
   * CRTDebug.c: added alternative implementation for the dynamic string
     allocation in case a system does not have any vasprintf() function.
   * CRTDebug.c: changed the vsnprintf() usage to use vasprintf() instead.
     This removes the 1024 character limit for outputting a string.

2007-03-19  Jens Langner <Jens.Langner@light-speed.de>

   * CRTDebug.c: added DBC_TIMEVAL to the default debugging classes in case
     no debugging variable is found during init.

2007-03-07  Jens Langner <Jens.Langner@light-speed.de>

   * CRTDebug.c: exchanged the colors for DEBUG and REPORT output. DEBUG
     output should now be green and reports be outputted in purple instead.

2006-11-30  Jens Langner <Jens.Langner@light-speed.de>

	* CRTDebug.c: Now the time calculations should finally be correct. I
     really can't believe how easy it is/was to mix up milli with micro :)
	* CRTDebug.c: fixed the STARTCLOCK()/STOPCLOCK() functionality as it was
	  outputting incorrect time values which where quiet confusing.

2006-09-08  Jens Langner <Jens.Langner@light-speed.de>

	* examples: added new examples directory for preparing some small, minor
     examples on how to use rtdebug within own projects.

#### 2.0 RELEASE ##########################################################
