@@ -11,6 +11,9 @@ $URL$
    * configure: allow gcc versions like 4.6, too, instead of 4.6.x only.
    * CRTDebug.cpp: correctly switch back to decimal output of numbers after
      printing some hexdecimal numbers.
+   * CRTDebug.cpp: include the process ID in the output to assist parallel
+     usage of librtdebug in multiple applications all of which print to the
+     same shell.
 
 2009-07-28  Jens Langner <Jens.Langner@light-speed.de>
 
